# ResearchEDC

./: .dockerignore  .gitattributes  .gitignore  .trivy-config.yml  AGENTS.md  Dockerfile  MODERNIZATION_FINAL.md  MODERNIZATION_PHASE2_COMPLETE.md  MODERNIZATION_SUMMARY.md  MODIFICATIONS.md  Makefile  NOTICE  OpenClinica_Architecture_Debt_Design.md  OpenClinica_Review.md  PLAN.md  README.md  ResearchEDC_Spring_Security_Login_Implementation_Plan.md  UPSTREAM.md  V3.17.3_UPDATE.md  apidoc.json  dependency-check-suppressions.xml  deploy-bare.sh  deploy-docker.sh  deploy-host.sh  deploy.sh  libplexus-classworlds2-java_2.7.0-1_all.deb  maven_3.8.7-2_all.deb  next_optimization_and_dashboard_plan.md  openclinica_github_actions_legacy_refactor_plan.md  openclinica_modernization_refactor_plan.md  openclinica_randomization_module_implementation_plan.md  pom.xml  questionnaire_python_backend_roadmap.md
questionnaire-service/apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
questionnaire-service/apps/api/alembic/: env.py
questionnaire-service/apps/api/alembic/versions/: 0001_initial.py
questionnaire-service/apps/api/app/: main.py
questionnaire-service/apps/api/app/core/: auth.py  config.py  database.py  exceptions.py  security.py
questionnaire-service/apps/api/app/models/: __init__.py  audit_log.py  export_job.py  questionnaire_answer.py  questionnaire_assignment.py  questionnaire_response.py  questionnaire_template.py  questionnaire_version.py
questionnaire-service/apps/api/app/repositories/: __init__.py  assignment_repo.py  audit_repo.py  base.py  (+3 more)
(+4504 files in other folders)
